# Macro-Signal-Engine-OpenEnv

./: .cursorrules  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  inference.py  openenv.yaml  pre_submission_test.ipynb  pyproject.toml  requirements.txt  test.py
assets/: results.json
data/: scenarios.json
server/: __init__.py  app.py
src/envs/macro_signal/: __init__.py  client.py  models.py
src/envs/macro_signal/server/: __init__.py  app.py  environment.py
tests/: test_environment.py
