[project]
name = "macro-signal-env"
version = "1.0.0"
description = "Macro Signal Engine — OpenEnv environment for LLM macro quant reasoning"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "KrishVenky" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "websockets>=12.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
inference = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
server = "server.app:main"
macro-signal-server = "macro_signal.server.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/envs"]

[tool.hatch.build.targets.wheel.sources]
"src/envs" = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
